[Java] Add module opens to avoid warnings from reflective access.